[package]
name = "derp"
version = "0.0.1"
authors = ["heartsucker <heartsucker@autistici.org>"]
description = "DER Parser (and Writer)"
homepage = "https://github.com/heartsucker/derp"
repository = "https://github.com/heartsucker/derp"
documentation = "https://docs.rs/derp"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = [ "der", "parser" ]

[dependencies]
untrusted = "0.5"
