[package]
name = "derp"
version = "0.0.1"
authors = ["heartsucker <heartsucker@autistici.org>"]
description = "DER Parser (and Writer)"
homepage = "https://github.com/heartsucker/derp"
repository = "https://github.com/heartsucker/derp"
documentation = "https://docs.rs/derp"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = [ "der", "parser" ]

[[bin]]
name = "derp"
path = "./src/bin/derp.rs"
doc = false
required-features = [ "cli" ]

[features]
cli = [ "clap", "data-encoding", "pem" ]

[dependencies]
clap = { version = "2.23", optional = true }
data-encoding = { version = "2.0.0-rc.1", optional = true }
pem = { version = "0.4", optional = true }
untrusted = "0.5"
